feat: docker hub 사용 방법 및 이미지 가져오기 명령 추가

--- a/jongseong/section02/정리.md
+++ b/jongseong/section02/정리.md
@@ -112,3 +112,13 @@ docker image prune
 ```bash
 docker build -t goals:latest .
 ```
+
+
+## 이미지 공유하기
+
+- Docker Hub에 이미지를 공유할 수 있다.
+- 공개 저장소면 무료이고, 프라이빗 저장소는 1개만 가능하다
+
+## 이미지 가져오기
+
+- `docker pull {이미지 이름}:{태그}`
