--- a/jongseong/section02/정리.md
+++ b/jongseong/section02/정리.md
@@ -13,7 +13,7 @@
 docker pull node:latest
 
 # 노드 이미지 실행
-doccker run node
+docker run node
 
 # 실행중인 컨테이너 확인하기
 docker ps -a
@@ -91,6 +91,9 @@ docker image prune
 ```
 
 - 강의에서 알려준 `--rm` 옵션은 개인적으로 개발환경에서만 써야 한다. 프로덕션 환경에서는 지양하는 것이 좋다.
+  - 컨테이너 로그 분석이 필요한 경우 즉시 삭제되면 문제 해결이 어려움
+  - 장애 발생 시 원인 파악을 위한 컨테이너 상태 확인이 불가능
+  - 자동화된 모니터링 도구가 컨테이너 상태를 추적하기 어려움
 
 ## 이미지 검사하기
 
