--- a/jongseong/section02/정리.md
+++ b/jongseong/section02/정리.md
@@ -124,3 +124,135 @@ docker build -t goals:latest .
 ## 이미지 가져오기
 
 - `docker pull {이미지 이름}:{태그}`
+
+## 이미지 레이어에 대한 심화
+
+### 이미지 레이어 순서
+
+- python 앱이라고 가정한다면 이론적인 이미지는 다음과 같다.
+
+1. 첫 번째 계층은 기본 명령과 apt와 같은 패키지 관리를 추가한다.
+2. 두 번째 계층은 두 번째 계층은 종속성 관리를 위해 Python 런타임과 pip를 설치한다.
+3. 세 번째 계층은 응용 프로그램의 특정 requirements.txt 파일을 복사한다.
+4. 네 번째 계층은 해당 애플리케이션의 특정 종속성을 설치한다.
+5. 다섯 번째 계층은 응용 프로그램의 실제 소스 코드를 복사한다.
+
+![img.png](img/img1.png)
+
+```bash
+# 기본 이미지 설정
+FROM ubuntu:20.04
+
+# Maintainer 정보
+LABEL maintainer="your_email@example.com"
+
+# 환경 변수 설정 (예: 비대화식 apt 설치)
+ENV DEBIAN_FRONTEND=noninteractive
+
+# 1. 기본 패키지 설치
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    curl \
+    wget \
+    vim \
+    python3 \
+    python3-pip \
+    python3-venv \
+    && rm -rf /var/lib/apt/lists/*
+
+# 2. pip 최신화
+RUN pip3 install --upgrade pip
+
+# 3. 작업 디렉토리 설정
+WORKDIR /app
+
+# 4. requirements.txt 복사
+COPY requirements.txt .
+
+# 5. 종속성 설치
+RUN pip install --no-cache-dir -r requirements.txt
+
+# 6. 소스 코드 복사
+COPY . .
+
+# 7. 컨테이너 실행 시 기본 명령 설정
+CMD ["python3", "app.py"]
+```
+
+### 레이어 쌓기
+
+출처: [잡다한 기술공방](https://creboring.net/blog/how-docker-divide-image-layer/), [이미지 레이어 이해하기](https://docs.docker.com/get-started/docker-concepts/building-images/understanding-image-layers/)
+
+- 계층화는 콘텐츠 주소 지정이 가능한 저장소와 유니온 파일 시스템에 의해 가능하다.
+
+1. 각 계층이 다운로드되면 호스트 파일 시스템의 자체 디렉토리로 추출한다.
+2. 이미지에서 컨테이너를 실행하면 레이어가 서로 위에 쌓여 새롭고 통합된 뷰를 만드는 유니온 파일 시스템이 생성된다.
+3. 컨테이너가 시작되면 chroot를 사용하여 컨테이너의 루트 디렉터리가 이 통합 디렉터리의 위치로 설정된다.
+
+- 유니온 파일 시스템이 생성되면 이미지 레이어 외에도 실행 중인 **컨테이너를 위한 디렉터리가 특별히 생성된다**. 이렇게 하면 컨테이너가 파일 시스템을 변경하면서 원본 이미지 레이어는 그대로 유지할 수 있다.
+  이렇게 하면 동일한 기본 이미지에서 여러 컨테이너를 실행할 수 있다.
+- 이미지 레이어는 ‘파일시스템의 변경사항을 캡처하는 단위’ 이다.
+- > 도커의 레이어 방식은 이미지뿐만 아니라 컨테이너가 실행될 때도 사용됩니다. 이미지를 이용해 새로운 컨테이너를 실행하면, 이미지 레이어 스냅샷들이 복원되고 신규 컨테이너 공간에 mount 됩니다. 그리고 그
+  이후 해당 mount 위에 새로운 레이어가 구성되는데, 해당 컨테이너 환경 내에서 발생하는 모든 변경사항이 이 새로운 레이어에 저장됩니다. 이를 컨테이너 레이어라 부릅니다.   
+  > 이는 해당 컨테이너에서의 변경사항이 기존 이미지 레이어에 영향을 가하지 않고 해당 컨테이너의 격리된 공간 내에서만 행해짐을 뜻합니다.   
+  > 기존 이미지 레이어들이 Read Only로 읽기만 가능한 것과 반대로, 새로 만들어진 컨테이너 레이어는 Read와 Write가 모두 가능합니다. 대신, 별도의 namespace 공간에서 새로운 레이어를 띄워
+  작업하기 때문에, 해당 컨테이너가 종료되면 변경사항 또한 모두 함께 삭제됩니다.
+
+## UnionFS 란? (w/ Chatgpt)
+
+**UnionFS (Union File System)**는 Docker에서 여러 파일 시스템을 결합하여 하나의 가상 파일 시스템을 만들기 위해 사용되는 기술입니다. Docker는 **UnionFS**를 사용하여 여러
+레이어를 하나로 합쳐 **이미지**와 **컨테이너**의 파일 시스템을 구성합니다. 이를 통해 **파일 시스템의 레이어들**을 **효율적으로 합성**하여, **디스크 공간을 절약**하고 **빠른 속도**로 파일을
+처리할 수 있습니다.
+
+### UnionFS의 핵심 개념
+
+UnionFS는 여러 디스크 공간을 **하나의 가상 파일 시스템**으로 병합하여 여러 레이어를 지원하는 파일 시스템입니다. 이 시스템은 각 파일 시스템이 **읽기 전용**이고, 필요 시 **읽기/쓰기** 가능한
+레이어가 추가됩니다.
+
+### Docker에서 UnionFS의 사용
+
+Docker는 컨테이너와 이미지를 관리하기 위해 UnionFS의 다양한 구현체를 사용합니다. Docker의 **파일 시스템 드라이버**는 UnionFS를 기반으로 하여 여러 레이어를 관리합니다.
+
+#### Docker에서 사용하는 UnionFS 구현체
+
+1. **OverlayFS**:
+    - OverlayFS는 Docker에서 가장 널리 사용되는 UnionFS 구현입니다.
+    - 이 파일 시스템은 **`lowerDir`** (읽기 전용 레이어)와 **`upperDir`** (읽기/쓰기 가능한 레이어)로 구분됩니다.
+    - OverlayFS는 **Copy-on-Write** 방식으로 작동하여, 기존 파일을 수정하려는 경우, 파일을 새로운 `upperDir`로 복사하여 변경된 내용을 기록합니다. 이를 통해 디스크 공간을
+      절약하고 효율적인 파일 관리를 할 수 있습니다.
+
+2. **AUFS (Another Union File System)**:
+    - Docker는 이전에 AUFS를 사용했으나, 최근에는 OverlayFS로 대체되고 있습니다.
+    - AUFS는 여러 개의 디렉터리 레벨을 결합하여 하나의 파일 시스템으로 만들 수 있으며, 파일 시스템의 레이어가 많아지면 관리가 어려워질 수 있습니다.
+
+3. **Btrfs와 ZFS**:
+    - Btrfs와 ZFS도 UnionFS와 비슷한 방식으로 파일 시스템의 여러 레이어를 관리할 수 있습니다. 하지만 Docker에서 기본적으로 사용되는 파일 시스템은 아니며, 특정 요구 사항이 있을 때 사용될
+      수 있습니다.
+
+### UnionFS의 장점
+
+- **디스크 공간 절약**: 여러 컨테이너가 동일한 이미지 레이어를 공유하여, 여러 컨테이너가 있을 때도 저장 공간을 절약할 수 있습니다.
+- **빠른 성능**: 새로운 레이어가 기존 레이어 위에 추가되기 때문에, 컨테이너 실행 시 필요한 파일을 빠르게 조회할 수 있습니다.
+- **Copy-on-Write (COW)**: 파일을 변경할 때마다 해당 파일이 변경된 새로운 레이어에 저장되며, 원본 파일은 읽기 전용으로 유지됩니다. 이를 통해 불필요한 중복을 방지하고, 변경된 내용만
+  저장됩니다.
+
+### UnionFS의 동작 원리
+
+- **이미지 레이어**는 읽기 전용이며, 여러 컨테이너에서 공유됩니다.
+- **컨테이너의 변경 사항**은 읽기/쓰기 레이어에 저장되며, 변경되지 않은 파일은 여전히 기존의 이미지 레이어에서 참조됩니다.
+- **컨테이너가 삭제되면** 해당 컨테이너의 읽기/쓰기 레이어만 제거되고, 이미지 레이어는 그대로 유지됩니다.
+
+### 예시: Docker에서 UnionFS를 사용하는 방식
+
+1. **이미지 빌드**:
+    - Docker 이미지는 여러 레이어로 구성됩니다. 각 레이어는 `Dockerfile`의 명령어 하나로 만들어집니다.
+2. **컨테이너 실행**:
+    - 컨테이너가 실행되면 이미지의 읽기 전용 레이어 위에 새로운 읽기/쓰기 레이어가 추가됩니다.
+    - 이 읽기/쓰기 레이어는 컨테이너가 실행되는 동안만 존재하며, 컨테이너 종료 후 삭제됩니다.
+
+---
+
+UnionFS는 Docker에서 파일 시스템을 관리하고, 여러 레이어를 효율적으로 결합하여 컨테이너 기반의 가상화 시스템을 실용적으로 만들어주는 중요한 기술입니다. 이를 통해 Docker는 이미지를 빠르게 빌드하고,
+컨테이너를 경량화하며, 리소스를 효율적으로 관리할 수 있습니다.
+
+```
